- Do not throw an error on empty ODBC CATFUNC (MDEV-5455) modified:   storage/connect/ha_connect.cc   storage/connect/odbconn.cpp